--- a/project_docs/colors.scss
+++ b/project_docs/colors.scss
@@ -13,3 +13,18 @@ $color2: rgba(17, 157, 164, 1);
 $color3: rgba(90, 188, 185, 1);
 $color4: rgba(246, 240, 224, 1);
 $color5: rgba(200, 70, 48, 1);
+
+/* Colormind generated UI Scheme */
+$light-shade: #f6f3f2;
+$light-accent: #5abcb9;
+$main: #119da4;
+$dark-accent: #c84630;
+$dark-shade: #08415c;
+
+/* Colormind semantic colors */
+$primary: #1ea3ea;
+$info: #08405c;
+$success: #3eab6c;
+$warning: #bc9b34;
+$danger: #f44336;
+$default: #999999;
