--- a/client_web/src/styles/base/typography.scss
+++ b/client_web/src/styles/base/typography.scss
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 20px;
 }
 
-h1, h2, h3 {
+h1, h2 {
   font-family: 'Quando';
   @include font-scale($scale, 6)
 }
