--- a/client_web/src/styles/utils/extendables.scss
+++ b/client_web/src/styles/utils/extendables.scss
@@ -1,5 +1,5 @@
 %shadow{
-  box-shadow: 5px 5px 10px 5px $shadow;
+  box-shadow: 5px 5px 10px $shadow;
 }
 
 %card-base{
@@ -8,4 +8,8 @@
   padding: 30px;
   display: block;
   margin-bottom: 5px;
+}
+
+%round-border {
+  border-radius: 999999px;
 }
