--- a/client_web/src/styles/utils/mixins.scss
+++ b/client_web/src/styles/utils/mixins.scss
@@ -24,6 +24,12 @@
   }
 }
 
+@mixin bp-xs {
+  @media (max-width: $breakpoint-xs) {
+    @content;
+  }
+}
+
 @mixin font-scale($scale, $exp) {
 
   font-size: exponent($scale, $exp) + em;
