--- a/client_web/src/styles/components/navbar.scss
+++ b/client_web/src/styles/components/navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
   @extend %shadow;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+  padding: 5px 16px 5px 8px;
 
   .nav-link.active {
     font-weight: 500;
