added section below info-panels

--- a/client_web/src/styles/components/infoPanels.scss
+++ b/client_web/src/styles/components/infoPanels.scss
@@ -1,16 +1,12 @@
 .info-panels {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  max-width: 1260px;
-  margin: 0px auto;
+  @extend %home-section;
 
   .info-panel {
     display: flex;
     flex-flow: column nowrap;
     max-width: 300px;
     align-items: center;
-    margin: 10px;
+    margin: 0 10px 0 10px;
 
     img {
       @extend %drop-shadow;
