added testimonials to my testimonial carousel

--- a/client_web/src/styles/utils/extendables.scss
+++ b/client_web/src/styles/utils/extendables.scss
@@ -29,6 +29,7 @@
   align-items: center;
   max-width: 1260px;
   margin: 0px auto;
-  min-height: 60vh;
+  height: 60vh;
+  min-height: 540px;
   padding: 15px 0 15px 0;
 }
