--- a/client_web/src/styles/utils/colors.scss
+++ b/client_web/src/styles/utils/colors.scss
@@ -5,9 +5,10 @@ $main: #119da4;
 $dark-accent: #c84630;
 $dark-shade: #08415c;
 
+/* Background Gradient */
+$bg-gradient: radial-gradient(ellipse at bottom left, rgba(8,65,92,1) 0%, rgba(50,138,162,1) 51.69%, rgba(160,223,221,1) 100%);
+
 /* Colormind semantic colors */
-
-
 $shadow: rgba(0,0,0,.18);
 $heavy-shadow: rgba(0,0,0,0.75);
 
